--- a/css/signup.css
+++ b/css/signup.css
@@ -32,6 +32,7 @@
   border: 1px solid #bbb;
   border-radius: 6px;
   font-size: 1rem;
+  box-sizing: border-box;
 }
 
 /* Reserve space for the eye icon inside password inputs */
